Aggiunta nuova proprieta' per dispiegamento
Issue #516 
Aggiunta nuova proprieta' per il dispiegamento che risolve il problema nella generazione degli avvisi di pagamento.